# BS-LLM-WebUI

./: .gitignore  Dockerfile.backend  Dockerfile.frontend  Dockerfile.nginx  LICENSE  README.md  docker-compose.yml  hello.nl  nginx.conf  nginx.dev.conf  package-lock.json  package.json  sample.env
backend/: .dockerignore  .gitignore  .pylintrc  .sample-env  Dockerfile  README.md  manage.py  pyproject.toml
backend/api/: admin.py  models.py  serializers.py  services.py  signals.py  tool_manager.py  urls.py  views.py
backend/api/api/: settings.py  urls.py
backend/api/chat/: admin.py  models.py
backend/api/fixtures/: initial_data.json  tools_fixture.json
backend/api/migrations/: 0001_initial.py  0002_ollamamodel.py  0002_tool_description_alter_tool_name.py  0002_usermessage_deleted_at_usermessage_is_deleted.py  0003_alter_conversation_id.py  0003_alter_tool_id.py  0003_assistantmessage_deleted_at_and_more.py  0004_alter_conversation_id.py  0004_alter_tool_description.py  0005_alter_conversation_id.py  0005_tool_created_at_tool_updated_at.py  0006_alter_tool_script.py  0006_assistantmessage_liked_conversation_liked.py  0007_alter_tool_name.py  0007_ollamamodel_liked.py  0008_alter_model_name.py  0008_usermessage_image.py  0009_assistantmessage_tools_used.py  0009_ollamamodel_color_alter_usermessage_image.py  0010_alter_assistantmessage_model.py  0010_alter_ollamamodel_color.py  0011_alter_ollamamodel_color.py  0011_usermessage_use_tools.py  0012_alter_assistantmessage_model.py  0013_alter_usermessage_image.py  0014_provider.py  0015_model_delete_provider_alter_assistantmessage_model.py  0016_delete_ollamamodel.py
backend/api/models/: assistant_message.py  content_variation.py  conversation.py  model.py  (+2 more)
backend/backend/: settings.py  urls.py
backend/testing/: test.py  testing.ipynb
backend/users/: admin.py  models.py  serializers.py  signals.py  urls.py  views.py
(+346 files in other folders)
