[tool.poetry]
name = "bruh-llm-ui-api"
version = "0.1.0"
description = ""
authors = ["ethanlchristensen <ethanlchristensen@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.1"
requests = "^2.32.3"
ollama = "^0.3.2"
pillow = "^10.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
